update admin funcs